# fimal

./: .gitignore  CMakeLists.txt
canis/include/Canis/: Editor.hpp  Window.hpp
canis/src/: Editor.cpp  Window.cpp
game/: CMakeLists.txt
game/cmake/: GenerateRegisterScripts.cmake
game/include/BlockGame/: CGTest.hpp  FireTest.hpp  NewScript.hpp  NewScriptTest.hpp  NewScriptWW.hpp  NewScriptw.hpp
game/include/Player/: PlayerController.hpp
game/include/RollABall/: Testhy.hpp
game/include/SuperPupUtilities/: FPSCounter.hpp
game/src/BlockGame/: CGTest.cpp  FireTest.cpp  NewScript.cpp  NewScriptTest.cpp  NewScriptWW.cpp  NewScriptw.cpp
game/src/Environment/: GenerateTerrain.cpp
game/src/Player/: PlayerController.cpp
game/src/RollABall/: Testhy.cpp
project/assets/defaults/postprocess/: default.postprocess
project/assets/materials/: blue.material  brick.material  cobblecobble.material  fire.material  glass.material  grass_block.material  green.material  new_material.material  new_material_1.material  oak.material
project/assets/scenes/: game_loop.scene  roll_a_ball.scene  start_menu.scene
project/assets/shaders/: fire.fs  fire.vs  fire_animation.fs  new_shader.fs  new_shader_1.vs
project_settings/: imgui.ini  project.canis
scripts/: create-game-script.bat  create-game-script.ps1
